<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment"
    android:background="@color/milkWhite">

  <com.airbnb.lottie.LottieAnimationView
      android:layout_width="350dp"
      android:layout_height="350dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="50dp"
      app:lottie_autoPlay="true"
      app:lottie_loop="true"
      app:lottie_rawRes="@raw/playstation"/>

  <TextView
      android:id="@+id/Welcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="430dp"
      android:fontFamily="@font/ubuntu_medium"
      android:text="@string/welcome"
      android:textColor="@color/black"
      android:textSize="45sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/motivationText"
      android:layout_width="290dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:fontFamily="@font/nunito"
      android:text="Join us and enjoy the depths of the"
      android:textColor="@color/lightBlack"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/Welcome" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/motivationText"
    android:layout_marginTop="5dp"
    android:textSize="18sp"
    android:textColor="@color/lightBlack"
    android:text="gaming world"
    android:fontFamily="@font/nunito"/>


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/WelcomeLoginButton"
      android:layout_width="270dp"
      android:layout_height="60dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/Welcome"
      android:layout_marginTop="100dp"
      android:background="@drawable/welcome_login_shape"
      android:textColor="@color/white"
      android:textSize="18sp"
      android:text="@string/login"
      android:textAllCaps="false"
      android:fontFamily="@font/ubuntu_medium"
      android:gravity="center_vertical"
      android:paddingStart="40dp"
      android:drawableEnd="@drawable/east_icon"
      android:paddingEnd="40dp"/>

  <TextView
      android:id="@+id/WelcomeDontHaveAccount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="85dp"
      android:layout_marginTop="25dp"
      android:text="@string/don_t_have_an_account"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/WelcomeLoginButton" />

  <TextView
    android:id="@+id/WelcomeRegister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/WelcomeDontHaveAccount"
    android:textColor="@color/lightBlack"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="@id/WelcomeDontHaveAccount"
    android:layout_marginStart="3dp"
    android:textSize="16sp"
    android:text="@string/register"/>





</androidx.constraintlayout.widget.ConstraintLayout>